--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Fairy tales'
+- GITenberg
 tableOfContents: The birth of the fairy tale -- Snow-white and Rosy-red -- The story
   of Argilius and the Flame-king -- Persevere and prosper -- Prince of the glow-worms
   -- The two misers -- Prince Chaffinch -- The wolf and the nightingale -- The enchanted
